kubernetes-manifests/old/sleep.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: stars-celery
  namespace: stars-dev
  labels:
    app: stars-celery
    tier: queue
spec:
  replicas: 1
  selector:
    matchLabels:
      app: stars-celery
      tier: queue
  template:
    metadata:
      labels:
        app: stars-celery
        tier: queue
    spec:
      containers:
      - name: stars-celery
        image: gcr.io/aashe-migration/stars-image:0d11afde-0c79-4e89-98b6-555da474fb5c
        command: ["/bin/sh", "-ec", "sleep 3000"]
        ports:
        - containerPort: 8080
        readinessProbe:
          tcpSocket:
            port: 8080
          initialDelaySeconds: 5
