kubernetes-manifests/old/stars.celery.deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: stars-celery
  namespace: stars-dev
  labels:
    app: stars-celery
    tier: queue
spec:
  replicas: 1
  selector:
    matchLabels:
      app: stars-celery
      tier: queue
  template:
    metadata:
      labels:
        app: stars-celery
        tier: queue
    spec:
      containers:
      - name: stars-celery
        image: gcr.io/aashe-migration/stars-image:7c813dc3-2fbd-40a5-b32b-712bee53adba
        command: ["celery"]
        args: ["-A", "stars", "worker", "--config", "stars/celery.py", "--loglevel=DEBUG"]
        ports:
        - containerPort: 8080
        readinessProbe:
          tcpSocket:
            port: 8080
          initialDelaySeconds: 5
