kubernetes-manifests/old/stars.deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: stars
  namespace: stars-dev
  labels:
    app: stars
    tier: app
spec:
  replicas: 1
  selector:
    matchLabels:
      app: stars
      tier: app
  template:
    metadata:
      labels:
        app: stars
        tier: app
    spec:
      containers:
      - name: stars
        image: gcr.io/aashe-migration/stars-image:BUILD_ID
        command: ["python"]
        args: ["manage.py", "runserver", "0.0.0.0:8080", "--noreload"]
        ports:
        - containerPort: 8080
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: stars-celery
  namespace: stars-dev
  labels:
    app: stars-celery
    tier: queue
spec:
  replicas: 1
  selector:
    matchLabels:
      app: stars-celery
      tier: queue
  template:
    metadata:
      labels:
        app: stars-celery
        tier: queue
    spec:
      containers:
      - name: stars-celery
        image: gcr.io/aashe-migration/stars-image:BUILD_ID
        command: ["./run-celery.sh >> celery.log"]
        ports:
        - containerPort: 8080
