kubernetes-manifests/old/stars.django.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: stars
  namespace: stars-dev
  labels:
    app: stars
    tier: app
spec:
  replicas: 1
  selector:
    matchLabels:
      app: stars
      tier: app
  template:
    metadata:
      labels:
        app: stars
        tier: app
    spec:
      containers:
      - name: stars
        image: gcr.io/aashe-migration/stars-image:7c813dc3-2fbd-40a5-b32b-712bee53adba
        command: ["./run-django.sh"]
        ports:
        - containerPort: 8080
