kubernetes-manifests/old/stars.service.c.yaml
apiVersion: v1
kind: Service
metadata:
  name: stars-clusterip
  namespace: stars-dev
  annotations:
    cloud.google.com/neg: '{"ingress": false}'
  labels:
    app: stars
    tier: app
spec:
  type: ClusterIP
  ports:
  - protocol: TCP
    port: 80
    targetPort: 8080
  selector:
    app: stars
    tier: app
