kubernetes-manifests/old/stars.service.np.yaml
apiVersion: v1
kind: Service
metadata:
  name: stars-external-np
  namespace: stars-dev
  annotations:
    cloud.google.com/neg: '{"ingress": false}'
  labels:
    app: stars
    tier: app
spec:
  type: NodePort
  ports:
  - protocol: TCP
    port: 8080
    targetPort: 8080
  selector:
    app: stars
    tier: app
