kubernetes-manifests/old/stars.ingress.yaml
apiVersion: networking.k8s.io/v1beta1
kind: Ingress
metadata:
  name: stars-dev-ingress
  namespace: stars-dev
  annotations:
    kubernetes.io/ingress.global-static-ip-name: stars-dev-ingress
    networking.gke.io/v1beta1.FrontendConfig: stars-dev-frontend-config
    cloud.google.com/backend-config: '{"default": "stars-http-hc-config"}'
spec:
  tls:
  - secretName: stars-tls-secret
  rules:
  - host: reports.aashe.org
    http:
      paths:
      - path: /*
        backend:
          serviceName: stars-external-np
          servicePort: 60000
