kubernetes-manifests/old/stars.ingress2.yaml
apiVersion: networking.k8s.io/v1beta1
kind: Ingress
metadata:
  name: stars-dev-ingress
  namespace: stars-dev
  annotations:
    kubernetes.io/ingress.global-static-ip-name: stars-dev-ingress
    cloud.google.com/backend-config: '{"default": "stars-http-hc-config"}'
spec:
  rules:
  - host: testreports.aashe.org
    http:
      paths:
      - path: /*
        backend:
          serviceName: stars-clusterip
          servicePort: 80
